--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^12.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "@mui/material": "^5.0.0",
     "@emotion/react": "^11.0.0",
-    "@emotion/styled": "^11.0.0"
+    "@emotion/styled": "^11.0.0",
+    "@mui/material": "^5.0.0",
+    "next": "^12.0.0",
+    "nodemailer": "^6.9.16",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   }
-} 
+}
