--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
     "@mui/material": "^5.0.0",
+    "mongoose": "^8.9.3",
     "next": "^12.0.0",
     "nodemailer": "^6.9.16",
     "react": "^17.0.0",
